<resources>
    <string name="app_name">JKeyBordPanelSwitch</string>
    <string name="app_github">GITHUB</string>
    <string name="app_github_url">https://github.com/Jacksgong/JKeyboardPanelSwitch</string>

    <string name="press_say">按住说话</string>
    <string name="site">位置</string>
    <string name="picture">照片</string>
    <string name="activity_main_title"><![CDATA[解决 面板<->键盘切换冲突导致 布局跳动问题]]></string>
    <string name="activity_chatting_resolved_title">解决了切换冲突</string>
    <string name="activity_chatting_fullscreen_resolved_title">解决了全屏切换冲突</string>
    <string name="activity_chatting_translucent_status_false_resolved_title">解决了状态栏透明(fitsSystemWindows=false)切换冲突</string>
    <string name="activity_chatting_translucent_status_true_resolved_title">解决了状态栏透明(fitsSystemWindows=true)切换冲突</string>
    <string name="activity_chatting_unresolved_title">未解决切换冲突</string>
    <string name="translucent_fullscreen_tips">透明全屏布局</string>
    <string name="app_compat_activity">AppCompatActivity</string>
    <string name="activity_or_fragment_activity">Activity/FragmentActivity</string>
    <string name="translucent_status_with_fitsystemwindow_true">Translucent Status with fitSystemWindows=true</string>
    <string name="translucent_status_with_fitssystemwindows_false">Translucent Status with fitsSystemWindows=false</string>
    <string name="full_screen_theme">Full Screen Theme</string>
    <string name="ignore_recommend_panel_height_cb_text">Ignore guaranteeing the panel height equal to the keyboard height</string>
    <string name="mark_panel1_to_img">照片-面板1</string>
    <string name="several_sub_panels_cb_text">There are several sub-panels in one page</string>
</resources>
