<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/app_compat_activity_rb"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp">

        <RadioButton
            android:id="@+id/app_compat_activity_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AppCompatActivity" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Activity/FragmentActivity" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/translucent_status_true_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Translucent Status with fitSystemWindow=true" />

    <Button
        android:id="@+id/handle_by_delay_resolved_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickResolved"
        android:padding="5dp"
        android:text="@string/activity_chatting_resolved_title" />

    <RadioGroup
        android:id="@+id/theme_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/full_screen_rb"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp">

        <RadioButton
            android:id="@+id/full_screen_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full Screen Theme" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Translucent Status with fitsSystemWindows=false" />
    </RadioGroup>

    <Button
        android:id="@+id/handle_by_placeholder_resolved_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickExtraThemeResolved"
        android:padding="5dp"
        android:text="@string/activity_chatting_fullscreen_resolved_title" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickUnResolved"
        android:padding="5dp"
        android:text="@string/activity_chatting_unresolved_title" />
</LinearLayout>